fix: 🐛 z-index for menuSelectWidget

--- a/skinStyles/ooui/oojs-ui-core.less
+++ b/skinStyles/ooui/oojs-ui-core.less
@@ -595,6 +595,7 @@ TODO: Need to refactor the current shadow for filter drop-shadow, see variables.
 }
 
 .oo-ui-menuSelectWidget {
+	z-index: 95;
 	border-color: var( --border-color-base--darker );
 	border-radius: 0 0 var( --border-radius--small ) var( --border-radius--small );
 	background-color: var( --color-surface-1 );
